--- a/src/assets/styles/main.module.css
+++ b/src/assets/styles/main.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   text-transform: uppercase;
   text-align: center;
 }
@@ -161,7 +161,7 @@ strong span {
   margin-left: 0;
   background-color: #ffbf00;
   padding: 0px 20px;
-  color: white;
+  color: #ffffff;
   border-radius: 25px;
   text-decoration: none;
 }
@@ -204,7 +204,7 @@ strong span {
 
 .portfolio_item .portfolio_item_hover .item_info span {
   display: block;
-  color: #fff;
+  color: #ffffff;
   font-size: 18px;
   -webkit-transform: translateX(-100px);
   transform: translateX(-100px);
